// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components <TodoItem /> TodoItem should render correctly -- completed 1`] = `
<x-box
  style={
    Object {
      "textDecoration": "line-through",
    }
  }
>
  <x-checkbox
    onClick={[MockFunction]}
    toggled={true}
  />
  <x-label
    for="checkbox"
  >
    Item
  </x-label>
</x-box>
`;

exports[`components <TodoItem /> TodoItem should render correctly -- not completed 1`] = `
<x-box
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <x-checkbox
    onClick={[MockFunction]}
    toggled={null}
  />
  <x-label
    for="checkbox"
  >
    Item
  </x-label>
</x-box>
`;
